[gd_scene load_steps=12 format=3 uid="uid://dl48iayg4ywba"]

[ext_resource type="Script" path="res://vaso_blue_new.gd" id="1_wuprr"]
[ext_resource type="Texture2D" uid="uid://dusm547dfg01k" path="res://Sprites/Objetos/VASO_AZUL.png" id="2_32nlj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d350i"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sfam3"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88j55"]
size = Vector2(12.7, 11.6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_41itc"]
size = Vector2(15, 13)

[sub_resource type="Animation" id="Animation_tv1c3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pick_up_zone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hurt_box/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_is5kq"]
resource_name = "anim"
length = 1.2
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 1, 2, 3, 4, 5, 6, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pick_up_zone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.14286),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hurt_box/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.14286),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.14286),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_e0blt"]
resource_name = "shoosh"
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hurt_box/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pick_up_zone/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5wnu4"]
_data = {
"RESET": SubResource("Animation_tv1c3"),
"anim": SubResource("Animation_is5kq"),
"shoosh": SubResource("Animation_e0blt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_567fo"]
size = Vector2(74, 11)

[node name="Vaso_blue_new" type="RigidBody2D"]
collision_layer = 3
collision_mask = 3
gravity_scale = 3.0
freeze_mode = 1
script = ExtResource("1_wuprr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(10, 10)
shape = SubResource("RectangleShape2D_d350i")

[node name="Pick_up_zone" type="Area2D" parent="."]
scale = Vector2(10, 10)
collision_layer = 1028
collision_mask = 1028

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pick_up_zone"]
shape = SubResource("RectangleShape2D_sfam3")
debug_color = Color(0, 0.643137, 0.333333, 0)

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(10, 10)
collision_layer = 80
collision_mask = 80

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.25, -0.4)
shape = SubResource("RectangleShape2D_88j55")
disabled = true
debug_color = Color(0.862745, 0.380392, 0.0901961, 0.0745098)

[node name="Timer" type="Timer" parent="."]

[node name="hurt_box" type="Area2D" parent="."]
scale = Vector2(10, 10)
collision_layer = 0
collision_mask = 88

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_box"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_41itc")
debug_color = Color(0.85098, 0.372549, 0, 0)

[node name="Sprite2D2" type="Sprite2D" parent="."]
scale = Vector2(10, 10)
texture = ExtResource("2_32nlj")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5wnu4")
}

[node name="player_grab" type="Area2D" parent="."]
collision_layer = 16777216
collision_mask = 16777216

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_grab"]
position = Vector2(0, -42.5)
shape = SubResource("RectangleShape2D_567fo")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="hurt_box" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="player_grab" to="." method="_on_player_grab_area_entered"]
[connection signal="area_exited" from="player_grab" to="." method="_on_player_grab_area_exited"]
